[package]
name = "cngateway"
version = "0.1.0"
edition = "2021"
description = "cyphernode gatekeeper client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "demo"

[dependencies]
tokio = { version = "1.22.0", features = ["rt","macros","rt-multi-thread"] }
serde = "1.0.126"
serde_derive = "1.0.0"
serde_json = "1.0.64"
ureq = { version = "2.4.0", features = ["json", "charset"] }
base64 = "0.13.0"
openssl = { version = "0.10", features = ["vendored"] }
