[package]
name = "cngateway"
version = "0.1.1"
edition = "2021"
description = "cyphernode gatekeeper client"

[dependencies]
tokio = { version = "1.22.0", features = ["fs", "rt","macros"] }
serde = "1.0.126"
serde_derive = "1.0.0"
serde_json = "1.0.64"
reqwest = { version = "0.11.13", features=["native-tls-vendored", "json"] }
base64 = "0.13.0"
jsonwebtoken = {version = "8.0.0", features = ["use_pem"]}
